--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".MainActivity"
@@ -13,8 +15,8 @@
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/empty_dice"
-        android:text="1"
+        app:srcCompat="@drawable/empty_dice"
+        tools:src="@drawable/empty_dice"
         />
 
     <Button
